feat: added settings to hide individual users, hide weekly shifts, display blockers from absence calendar in the shifts view
