# src/models/calendarSync.ts
@@ -7,3 +7,10 @@ export interface SynchronizeByShiftsPostPayload {
 }
 
 export type SynchronizeResponsePayload = string[]
+
+export interface AbsenceBlocker {
+	user_id: string
+	start: string
+	end: string
+	all_day: boolean
+}
